--- a/TRService/Web.config
+++ b/TRService/Web.config
@@ -29,6 +29,11 @@
       <add name="ApplicationInsightsWebTracking" type="Microsoft.ApplicationInsights.Web.ApplicationInsightsHttpModule, Microsoft.AI.Web"/>
     </httpModules>
   </system.web>
+  <mailSettings>
+    <smtp deliveryMethod="Network">
+      <network host="smtp.gmail.com" port="587" userName="traintickettesting01@gmail.com" password="trainticket123" enableSsl="true" />
+    </smtp>
+  </mailSettings>
   <system.webServer>
     <modules>
       <remove name="TelemetryCorrelationHttpModule"/>
