--- a/TRService/TRService.csproj
+++ b/TRService/TRService.csproj
@@ -199,6 +199,8 @@
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
+    <Compile Include="IManager\ITRManager.cs" />
+    <Compile Include="Managers\TRManager.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
